# tss-client

./: .gitignore  BUILD.md  CHANGELOG.md  Cargo.toml  DEMO.md  README.md  Settings.toml  TEST.md  build.sh  cbindgen.toml  cli.yml  makefile
.github/workflows/: ci.yml  create_new_tag.yml  release.yml
src/: lib.rs  main.rs
src/btc/: address.rs  mod.rs  raw_tx.rs  utils.rs
src/dto/: btc.rs  ecdsa.rs  eth.rs  mod.rs
src/ecdsa/: a_sign.rs  keygen.rs  mod.rs  recover.rs  rotate.rs  sign.rs
src/eddsa/: keygen.rs  mod.rs  sign.rs  types.rs
src/escrow/: mod.rs
src/eth/: address.rs  mod.rs  raw_tx.rs  transaction.rs  utils.rs
src/schnorr/: mod.rs
src/tests/: common.rs  mod.rs
src/utilities/: a_requests.rs  err_handling.rs  ffi.rs  mod.rs  requests.rs
src/wallet/: mod.rs
test-assets/: btc_w.json  eth_w.json  private_share.json  rotate_w.json
